--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -14,5 +14,6 @@ published: "Oppdatert 23. april 2024"
 alpine: true
 order: 2
 permalink: 'produkt/sykepenger/index.html'
+chapters: 'sykepenger'
 layout: 'article-page.njk'
 ---
