--- a/src/pages/produkt/sykmelding-og-sykepenger/sykmelding-og-sykepenger.njk
+++ b/src/pages/produkt/sykmelding-og-sykepenger/sykmelding-og-sykepenger.njk
@@ -6,9 +6,10 @@ title: "Sykmelding og sykepenger"
 description: ''
 ingress:
   "Informasjon til leger og behandlere om sykmelding og sykepenger. Om hvem som kan sykmelde, hvilke pasienter som kan sykmeldes, og nyttige verktøy og opplæring."
+chapters: 'sykmelding-og-sykepenger'
 audience:
-  style: "default"
-  current: "For leger og tannleger eller andre behandlere"
+  title: 'Samarbeidspartner'
+  description: "For leger og tannleger eller andre behandlere"
   others:
     "Det finnes også informasjon om sykmeldingen – for den som sykmelder til [privatpersoner](#) og [arbeidsgivere](#)"
 published: "Oppdatert 2. juni 2025"
