--- a/src/pages/situasjon/barn/barn.njk
+++ b/src/pages/situasjon/barn/barn.njk
@@ -5,6 +5,7 @@ type: "Situasjonsside"
 title: "Venter eller har nylig fått barn"
 ingress:
   "Når du får barn kan du og barnet ha rett til ulike støtteordninger. Hva du har rett til avhenger av situasjonen din."
+chapters: 'barn'
 published: "Oppdatert 13. februar 2024"
 alpine: true
 permalink: 'situasjon/barn/index.html'
