--- a/src/pages/situasjon/sykmeldt/sykmeldt.njk
+++ b/src/pages/situasjon/sykmeldt/sykmeldt.njk
@@ -6,6 +6,7 @@ title: "Har blitt sykmeldt"
 description: ''
 ingress:
   "Om rettighetene du har som sykmeldt, hvilke regler som gjelder og hva slags støtte du kan få."
+chapters: 'sykmeldt'
 published: "Oppdatert 24. april 2025"
 alpine: true
 order: 2
