--- a/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
+++ b/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
@@ -5,6 +5,7 @@ type: "Slik gjør du det"
 title: "Klagerettigheter"
 ingress:
   "Når du søker NAV om økonomisk støtte eller en tjeneste, får du et vedtak. Du kan klage på et vedtak som du mener er feil."
+chapters: 'klagerettigheter'
 published: "Oppdatert 12. april 2024"
 alpine: true
 description: ''
