--- a/src/pages/produkt/pleiepenger/pleiepenger.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger.njk
@@ -6,8 +6,10 @@ title: "Pleiepenger for sykt barn"
 description: ''
 ingress:
   "Sikrer deg inntekt når du ikke kan gå på jobb fordi du pleier et sykt barn."
+chapters: 'pleiepenger'
 audience:
-  style: "default"
+  title: 'Samarbeidspartner'
+  description: 'For leger, tannleger eller andre behandlere'
   others:
     "Det finnes også informasjon om pleiepenger for sykt barn til [arbeidsgivere](#) og [leger og tannleger eller andre behandlere](#)."
 published: "Oppdatert 7. mai 2025"
