--- a/src/pages/temaartikkel/tolkning-av-sosialtjenesteloven/tolkning-av-sosialtjenesteloven.njk
+++ b/src/pages/temaartikkel/tolkning-av-sosialtjenesteloven/tolkning-av-sosialtjenesteloven.njk
@@ -5,12 +5,13 @@ type: "Temaartikkel"
 title: "Tolkning av sosialtjenesteloven"
 description: ""
 ingress: "Arbeids- og velferdsdirektoratet har delegert myndighet fra Arbeids- og sosialdepartementet til å forvalte sosialtjenesteloven, herunder ansvaret for å tolke regelverket og veilede i dette."
+chapters: 'tolkning-av-sosialtjenesteloven'
 audience:
-  style: "default"
-  current: "For ansatte i kommunen eller fylkeskommunen"
+  title: 'Samarbeidspartner'
+  description: "For ansatte i kommunen eller fylkeskommunen"
 published: "Oppdatert 2. juli 2025"
 alpine: true
 order: 2
-permalink: "produkt/tolkning-av-sosialtjenesteloven/index.html"
+permalink: "temaartikkel/tolkning-av-sosialtjenesteloven/index.html"
 layout: "article-page.njk"
 ---
