--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,4 @@
-{%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-3.5 pr-4 leading-none cursor-pointer gap-0.5 xs:gap-1 text-blue-600 rounded-full bg-deepblue-50 min-w-0 py-2 sm:py-2.5 text-fluid-16-18 xs:text-fluid-18-20 pointer-fine:hover:bg-blue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 menu-button" -%}
+{%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-3.5 pr-4 leading-none cursor-pointer gap-0.5 xs:gap-1 text-blue-600 rounded-full bg-deepblue-50 min-w-0 py-2 sm:py-2.5 text-fluid-16-18 xs:text-fluid-18-20  focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 menu-button" -%}
 
 <header class="relative z-50 bg-white -scroll-mt-16 snap-start" id="toppen">
   <div class="z-10 grid grid-cols-article">
@@ -30,7 +30,7 @@
           class="{{ menuButtonClasses }} max-w-min xs:max-w-fit ml-auto order-2" 
           type="button" 
           x-on:click="menuOpen = !menuOpen, searchOpen = false"
-          x-bind:class="menuOpen && 'bg-deepblue-50'" 
+          x-bind:class="menuOpen && 'bg-deepblue-800 text-white'" 
           x-bind:aria-expanded="menuOpen"
         >
           <template x-if="!menuOpen">
@@ -45,7 +45,7 @@
           class="{{ menuButtonClasses }} max-w-min xs:max-w-fit ml-auto order-1" 
           type="button" 
           x-on:click="searchOpen = !searchOpen, menuOpen = false"
-          x-bind:class="searchOpen && 'bg-deepblue-50'" 
+          x-bind:class="searchOpen && 'bg-deepblue-800 text-white'" 
           x-bind:aria-expanded="searchOpen"
         >
           <template x-if="!searchOpen">
@@ -59,6 +59,9 @@
       </div>
     </div>
   </div>
+
+  {%- include "partials/navigation.njk" -%}
+  {%- include "partials/search.njk" -%}
 
   <div class="grid relative z-50 justify-center py-1 {{ 'bg-deepblue-50' if page.fileSlug !== 'min-side' else 'bg-deepblue-800 text-white' }} min-h-8 grid-cols-page has-[button:hover]:bg-slate-200">
     {% if loggedIn %}
@@ -75,8 +78,6 @@
     {% endif %}
   </div>
 
-  {%- include "partials/navigation.njk" -%}
-  {%- include "partials/search.njk" -%}
 </header>
 
 {# Overlay #}
