--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,5 +1,5 @@
 {# Navigation (Private) #}
-<div class="absolute z-40 w-full inset-x" x-bind:class="menuOpen ? 'opacity-0 animate-dropdown shadow-xl' : 'hidden'" x-bind:aria-hidden="!menuOpen" x-bind:hidden="!menuOpen" hidden>
+<div class="absolute z-[70] w-full inset-x" x-bind:class="menuOpen ? 'opacity-0 animate-dropdown shadow-xl' : 'hidden'" x-bind:aria-hidden="!menuOpen" x-bind:hidden="!menuOpen" hidden>
 
   {# Rollebytte #}
   <div class="grid py-3 bg-white grid-cols-combi">
