--- a/src/_includes/partials/search.njk
+++ b/src/_includes/partials/search.njk
@@ -1,4 +1,4 @@
-<div class="absolute z-40 w-full right-0 max-w-screen-sm min-h-[70vh] bg-white shadow-xl rounded-b-3xl sm:rounded-br-none" x-bind:class="searchOpen ? 'opacity-0 animate-dropdown' : 'hidden'" x-bind:aria-hidden="!searchOpen" x-bind:hidden="!searchOpen" hidden >
+<div class="absolute z-[70] w-full right-0 max-w-screen-sm min-h-[70vh] bg-white shadow-xl rounded-b-3xl sm:rounded-br-none" x-bind:class="searchOpen ? 'opacity-0 animate-dropdown' : 'hidden'" x-bind:aria-hidden="!searchOpen" x-bind:hidden="!searchOpen" hidden >
 
 <div class="px-8 pt-4 pb-12 ">
 
