Flere fonter inn i prototypen

--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -77,7 +77,7 @@
 
 
     {# Floating TOC #}
-    <div class="sticky inset-x-0 z-50 grid hidden bottom-6 col-full justify-items-start px-page">
+    <div class="sticky inset-x-0 z-50 hidden bottom-6 col-full justify-items-start px-page">
 
       <div class="h-6 translate-y-2 border-b-8 border-white pointer-events-none w-stretch bg-gradient-to-b from-transparent to-white"></div>
 
