--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,7 +1,7 @@
-{%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-3.5 pr-4 leading-none cursor-pointer gap-0.5 xs:gap-1 text-blue-600 rounded-full bg-deepblue-50 min-w-0 py-2 sm:py-2.5 text-fluid-16-18 xs:text-fluid-18-20  focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 menu-button" -%}
+{%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-3.5 pr-4 leading-none cursor-pointer gap-0.5 xs:gap-1 text-blue-600 rounded-full bg-deepblue-50 min-w-0 py-2 sm:py-2.5 max-xs:text-fluid-16-18 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 menu-button" -%}
 
 <header class="relative z-50 bg-white -scroll-mt-16 snap-start" id="toppen">
-  <div class="z-10 grid grid-cols-article">
+  <div class="relative z-30 grid bg-white isolate grid-cols-combi">
 
     <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] col-container">
 
@@ -63,7 +63,7 @@
   {%- include "partials/navigation.njk" -%}
   {%- include "partials/search.njk" -%}
 
-  <div class="grid relative z-50 justify-center py-1 {{ 'bg-deepblue-50' if page.fileSlug !== 'min-side' else 'bg-deepblue-800 text-white' }} min-h-8 grid-cols-page has-[button:hover]:bg-slate-200">
+  <div class="grid relative z-10 justify-center py-1 {{ 'bg-deepblue-50' if page.fileSlug !== 'min-side' else 'bg-deepblue-800 text-white' }} min-h-8 grid-cols-page has-[button:hover]:bg-slate-200">
     {% if loggedIn %}
       <a class="inline-flex items-center gap-1 px-3 py-1 text-white" href="/min-side">
         {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-7 h-7 -ml-0.5 shrink-0 pointer-events-none') | safe }}
@@ -78,11 +78,9 @@
     {% endif %}
   </div>
 
-</header>
-
 {# Overlay #}
 <button 
-  class="fixed inset-0 z-40 w-full h-full cursor-default bg-gray-400/40 backdrop-blur-xs" 
+  class="fixed inset-0 z-10 w-full h-full cursor-default bg-gray-400/25 backdrop-blur-xs" 
   type="button"
   x-show="(menuOpen || searchOpen || floatingTocOpen)" 
   x-on:click="menuOpen = false, searchOpen = false, floatingTocOpen = false" 
@@ -92,3 +90,6 @@
   x-transition:enter-end="opacity-100"
   x-bind:hidden="overlayOpen"
   hidden></button>
+
+
+</header>
