--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -9,7 +9,7 @@ ingress:
 audience:
   style: "default"
   others:
-    "Det finnes også informasjon om sykepenger til [privatpersoner](#) og [leger og andre behandlere](#)"
+    "Det finnes også informasjon om sykepenger til [privatpersoner](#) og [leger og andre behandlere](#)."
 published: "Oppdatert 23. april 2024"
 alpine: true
 order: 2
