--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      {{ title | safe }}
-      {{ '&ndash;' | safe if title }}
-      {{ site.title | safe }}
+      {{- title | safe -}}
+      {{- '&ndash;' | safe if title -}}
+      {{- site.title | safe -}}
     </title>
     <meta name="description" content="..." />
-
+    {% block fonts %} 
     {%- include "partials/fonts.njk" -%}
+    {% endblock %}
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2299%22>🧑‍💻</text></svg>" />
     <link rel="preconnect" href="https://www.nav.no" crossorigin />
-    <link rel="preload" href="/assets/fonts/SourceSans3-normal-latin.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="/assets/main.min.css" type="text/css" />
 
     {% if alpine %}
@@ -25,7 +25,6 @@
     {% endif %}
 
     {%- block script -%}{%- endblock -%}
-    {%- block fonts -%}{%- endblock -%}
     {%- block styles -%}{%- endblock -%}
   </head>
   <body
