--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,15 +1,15 @@
 <div class="sticky inset-x-0 bottom-0 border-t-8 z-90 border-warning"></div>
 
 <aside aria-label="Bare en prototype" class="leading-snug -z-0 overflow-clip" x-data="{ showProto: true }" x-show="showProto">
-  <div class="py-12 text-black bg-orange-200 px-page text-fluid-20-22">
+  <div class="py-12 text-black bg-orange-200 px-page text-fluid-18-20">
     <p class="self-center translate-y-1 text-balance">
       <span class="mr-1 font-semibold">Hei!</span> Dette er en en prototype til testing og utvikling.
       <a class="text-blue-600 underline pointer-fine:hover:decoration-2 pointer-fine:hover:text-blue-600" href="https://www.nav.no/">Her er lenken til nav.no</a>, om du har kommet feil.
     </p>
 
     <div class="py-4 mt-12 md:col-start-2">
-      <h2 class="font-semibold tracking-widest uppercase opacity-90 text-fluid-14-16">Sider i prototypen</h2>
-      <ul class="mt-3 md:columns-[56ch] gap-16">
+      <h2 class="font-semibold tracking-widest uppercase opacity-90 text-fluid-12-14">Sider i prototypen</h2>
+      <ul class="mt-3 md:columns-[64ch] gap-16">
       {% set pages = collections.proto | sort(false, false, 'data.order') %}
       {%- for type, pages in pages | groupby('data.type') -%}
         <li class="py-4 border-t md:pr-6 border-black/10 break-inside-avoid">
@@ -17,7 +17,7 @@
           {% if loop.first %}
             <b class="block pb-1 font-normal text-fluid-14-16 opacity-80">{{ type }}</b>
           {% endif %}
-          <a href="{{ item.url }}#toppen" class="py-1 underline hover:decoration-2 decoration-from-font underline-offset-4">{{ item.data.title | safe }}</a>
+          <a href="{{ item.url }}#toppen" class="py-1 font-semibold underline hover:decoration-2 decoration-from-font underline-offset-4">{{ item.data.title | safe }}</a>
           {% if pages.length > 1 and not loop.last %}  |  {% endif %}
           {%- endfor -%}
         </li>
