--- a/src/_includes/partials/fonts.njk
+++ b/src/_includes/partials/fonts.njk
@@ -1,3 +1,5 @@
+<link rel="preload" href="/assets/fonts/SourceSans3-normal-latin.woff2" as="font" type="font/woff2" crossorigin>
+
 <style>
   @font-face {
     font-family: "Source Serif 4";
