--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,16 +1,8 @@
 {# Navigation (Private) #}
 <div class="absolute z-[70] w-full inset-x" x-bind:class="menuOpen ? 'opacity-0 animate-dropdown shadow-xl' : 'hidden'" x-bind:aria-hidden="!menuOpen" x-bind:hidden="!menuOpen" hidden>
 
-  {# Rollebytte #}
-  <div class="grid py-3 bg-white grid-cols-combi">
-    <div class="grid content-center -mx-1 col-container xs:gap-2 sm:gap-6 xs:text-center sm:mx-0 sm:justify-center sm:grid-flow-col max-w-wide lg:mx-auto">
-    {% for role in menu.audience %}
-      <a href="#" class="block rounded-full py-1 px-5 {{ 'bg-blue-500 text-white font-semibold' if activeRole === role.title else 'hover:underline transition' }}">{{ role.title }}</a>
-    {% endfor %}
-    </div>
-  </div>
 
-  <div class="grid pt-8 pb-12 bg-white border-t border-slate-200 grid-cols-combi">
+  <div class="grid pt-8 pb-12 bg-white border-b border-slate-200 grid-cols-combi">
     <div class="grid gap-x-12 gap-y-12 col-container lg:grid-cols-5 lg:grid-rows-[1fr_auto]">
 
       {# Områder #}
@@ -50,6 +42,17 @@
       </div>
 
 
+    </div>
+  </div>
+
+
+  {# Rollebytte #}
+  <div class="grid py-3 bg-white grid-cols-combi">
+    <div class="grid content-center -mx-1 col-container xs:gap-2 sm:gap-6 xs:text-center sm:mx-0 sm:justify-center sm:grid-flow-col max-w-wide lg:mx-auto">   
+    <p>Bytt til sider for <a class="text-blue-600 underline underline-offset-2 hover:decoration-2" href="#">arbeidsgiver</a> eller <a class="text-blue-600 underline underline-offset-2 hover:decoration-2" href="#">samarbeidspartner</a>
+    {# {% for role in menu.audience %}
+      <a href="#" class="block rounded-full py-1 px-5 {{ 'bg-blue-500 text-white font-semibold' if activeRole === role.title else 'hover:underline transition' }}">{{ role.title }}</a>
+    {% endfor %} #}
     </div>
   </div>
 </div>
