--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -38,13 +38,13 @@
       <ul class="pr-6 mb-8 ml-1.5 border-l-2 text-fluid-16-18/normal opacity-90 border-slate-300">
         {% for chapter in chapters %}
         {% set chapterIndex = loop.index %}
-        <li class="relative pl-4 not-first:mt-1">
-          <div class="absolute left-0 hidden w-1 h-8 -translate-x-px lg:block rounded-r-xs" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'bg-deepblue-300'"></div>
-          <a class="inline-block px-1 pt-0.5 pb-1 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 toc-item" href="#{{ chapter.data.title | slugify }}" style="--for: --chapter-{{ loop.index }}">
+        <li class="not-first:mt-1">
+          <a class="relative inline-block px-1 pt-0.5 pl-4 pb-1 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 toc-item" href="#{{ chapter.data.title | slugify }}" style="--for: --chapter-{{ loop.index }}">
+          <div class="absolute inset-y-0 left-0 hidden w-1 -translate-x-px lg:block rounded-r-xs" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'bg-deepblue-300'"></div>
             {{ chapter.data.title }}
           </a>
           {% if (chapter.templateContent | tocData).length >= 2 %}           
-          <ul class="hidden my-1.5 ml-4 mb-6 lg:block" x-show="chapterIndex == {{ chapterIndex }}">
+          <ul class="hidden my-1.5 ml-8 mb-6 lg:block" x-show="chapterIndex == {{ chapterIndex }}">
           {% for item in chapter.templateContent | tocData %}
             <li class="not-first:mt-1">
               <a class="inline-block p-1 underline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}">
