--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -159,7 +159,8 @@
   --shrink-1: 1;
   --shrink-5: 5;
 
-  --spacing-page: clamp(1rem, -5rem + 15vw, 10rem);
+  --spacing-page: clamp(1rem, -3.5rem + 15vw, 10rem); 
+  /* clamp(1rem, -5rem + 15vw, 10rem) */
 
   --underline-offset-3: 3px;
 
