Fjerne unødvendig markup

--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -22,7 +22,7 @@
         {{ ingress | safe }}
 
         {% if audience.others %}          
-          <span>{{ audience.others | markdownInline | safe if audience }}</span>      
+          {{ audience.others | markdownInline | safe if audience }}      
         {% endif %}
       </p>
     </div>
