--- a/src/_includes/partials/search.njk
+++ b/src/_includes/partials/search.njk
@@ -3,7 +3,7 @@
 <div class="max-w-3xl pt-6 pb-12 ml-auto bg-white md:px-8 w-stretch rounded-b-xl col-full px-page sm:col-container">
 
   {# Søk #}
-  <form class="" action="/sok/#toppen">
+  <form class="" action="/sok/">
     <label class="block font-semibold text-fluid-16-18" for="search">Søk på nav.no</label>
     <div class="flex mt-2">
       <input class="flex-1 p-2 border border-gray-300 rounded-l focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800" id="search" type="text">
