--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -8,7 +8,7 @@
       <div class="flex items-center sm:col-span-2">
         {# Logo #}
         <div class="flex items-center py-5 sm:py-6">
-          <a href="/#toppen" class="block px-3 py-2.5 -ml-3.5 text-nav-red rounded-sm focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800">
+          <a href="/" class="block px-3 py-2.5 -ml-3.5 text-nav-red rounded-sm focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800">
             {{ '/src/_includes/svg/logo.svg' | svgContents('w-logo h-auto') | safe }}
             <span class="sr-only">NAV</span>
           </a>
