--- a/src/pages/kontor/kontor.njk
+++ b/src/pages/kontor/kontor.njk
@@ -15,7 +15,7 @@ alpine: true
     <div class="z-10 grid w-16 mx-auto translate-y-1/2 bg-blue-100 rounded-full place-items-center aspect-square">
       {{ box.icon | svgContents('w-7 h-7 shrink-0') | safe }}
     </div>
-    <div class="px-6 py-8 bg-white rounded-md md:py-12 md:px-10">
+    <div class="px-6 py-8 bg-white rounded-lg md:py-12 md:px-10">
       <h2 class="mt-3 font-semibold text-fluid-24-28">{{ box.title | safe }}</h2>
       <div class="mt-2 prose markdown">
         {{ box.content | markdown | safe }}
@@ -41,18 +41,18 @@ alpine: true
           {% for office in offices %}           
           <details>
             <summary>{{ office.title }}</summary>
-            <div class="columns-[32ch] gap-8 pt-4">
-              <div class="mb-8 prose break-inside-avoid">
+            <div class="gap-8 pt-4 lg:grid lg:grid-cols-5">
+              <div class="mb-8 prose lg:col-span-2">
                 <h3 class="text-fluid-20-22">Adresse</h3>
                 <address>
                   {{ office.address[0] }}<br>
                   {{ office.address[1] }}
                 </address>
                 {% if office.addressInfo -%}
-                <p>{{ office.addressInfo }}</p>
+                <p class="text-balance">{{ office.addressInfo }}</p>
                 {%- endif %}
               </div>
-              <div class="prose break-inside-avoid">
+              <div class="prose lg:col-span-3">
                 <h3 class="text-fluid-20-22">Åpningstider</h3>
                 <dl>
                   {% for day in office.openingHours %}
@@ -68,7 +68,7 @@ alpine: true
           {% endfor %}
         </div>
 
-        <div class="p-8 mt-8 rounded-md bg-gray-50">
+        <div class="p-8 mt-8 rounded-lg bg-gray-50">
           <p>Telefonnummeret til NAV er <span class="block font-semibold leading-tight text-fluid-24-28">55 55 33 33</span></p>
           <p class="pt-4">Du kan ikke ringe direkte til NAV-kontoret.</p>
         </div>
