--- a/src/pages/kontor/kontor.njk
+++ b/src/pages/kontor/kontor.njk
@@ -33,7 +33,7 @@ alpine: true
       </div>
 
       <div class="mt-8 col-main">
-        <h2 class="font-semibold text-fluid-24-28">Besøksadresser og åpningstider</h2>
+        <h2 class="font-semibold text-fluid-24-28">Besøksadresse og åpningstider når du ikke har en avtale</h2>
         <p>Du kan avtale møte med veilederen din utenom disse åpningstidene.</p>
         
         <div class="mt-8 accordion">
