Feil bredde i toppen

--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -11,10 +11,10 @@
       <h1 class="font-bold text-fluid-36-48/tight text-pretty">{{ title | safe }}</h1>
       <div class="mt-4 text-gray-700 text-fluid-12-14 font-regular">
         <span class="px-1.5 py-px border rounded-sm border-slate-300 bg-slate-100">{{ category | safe }}</span>
-        {% if audience.description %}
-          <span aria-hidden="true" class="inline-block">—</span>
-          {{ audience.description | safe }}
-        {% endif %}
+        {%- if audience.description %}
+          <span aria-hidden="true" class="inline-block mx-1">—</span>
+          {{- audience.description | safe -}}
+        {% endif -%}
       </div>
     </div>
     <div class="mt-6 pb-9 col-main">
