--- a/src/_includes/macros/video.njk
+++ b/src/_includes/macros/video.njk
@@ -1,6 +1,6 @@
 {% macro video(params) %} 
 <div class="relative flex flex-row-reverse items-center gap-3 group">
-  <button class="grid flex-1 gap-1 leading-tight text-left after:absolute after:inset-0" type="button">
+  <button class="grid flex-1 gap-1 leading-tight text-left cursor-pointer after:absolute after:inset-0" type="button">
     <span class="font-semibold">Se video: {{ params.title }}</span>
     <span class="text-fluid-16-18">Varighet er {{ params.duration }}</span>
   </button>
