--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -1,8 +1,43 @@
 {%- extends 'base.njk' -%}
 
+{% macro toc(chapters) %}
+  <ul class="pr-6 mb-8 ml-1.5 border-l-2 text-fluid-16-18/normal opacity-90 border-slate-300">
+    {% for chapter in chapters %}
+    {% set chapterIndex = loop.index %}
+    <li class="not-first:mt-1">
+      <a class="relative inline-block px-1 pt-0.5 pl-4 pb-1 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 toc-item" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
+      <div class="absolute inset-y-0 left-0 block w-1 -translate-x-px rounded-r-xs" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'bg-deepblue-300'"></div>
+        {{ chapter.data.title }}
+      </a>
+      {% if (chapter.templateContent | tocData).length >= 2 %}           
+      <ul class="hidden my-1.5 ml-8 mb-6" x-bind:class="{ 'hidden' : (chapterIndex != {{ chapterIndex }}) && !tocExpandAll }">
+        {% for item in chapter.templateContent | tocData %}
+        <li class="not-first:mt-1">
+          <a class="inline-block p-1 underline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
+            <span>{{ item.text }}</span>
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+    </li>
+    {% endfor %}
+  </ul>
+  <button type="button" x-on:click="tocExpandAll = !tocExpandAll" class="flex items-center gap-2 px-4 py-1 mb-8 border rounded-lg bg-slate-100 border-slate-300 text-fluid-16-18">
+    <template x-if="!tocExpandAll">
+      <span>Vis full oversikt</span>
+    </template>
+    <template x-if="tocExpandAll">
+      <span>Vis fokusert oversikt</span>
+    </template>
+  </button>
+{% endmacro %}
+
+
 {%- block content -%}
 
   {% set chapters = collections[chapters] | sort(false, false, 'data.order') %}
+
   <main class="relative grid items-start pt-16 pb-16 grid-cols-article toc-highlight" data-theme="sykepenger" x-data="{ chapterIndex: 0 }" style="--scopes: {% for chapter in chapters %}--chapter-{{ loop.index }}{{ ',' if not loop.last else ';' }}{% endfor %}">
     <div class="mb-3 col-pictogram" style="--pictogram: var(--color-deepblue-100)">
       {{ '/src/_includes/svg/piktogrammer/produkter/sykepenger.svg' | svgContents('text-deepblue-900 w-16 h-16 sm:w-20 sm:h-20 -translate-x-1') | safe  }}
@@ -29,40 +64,35 @@
 
     {% block quicklinks %}{% endblock %}
 
-    {# Innholdsfortegnelse 'pl-3.5' #}
-    <div class="lg:row-span-4 lg:sticky lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc " id="toc" x-intersect:leave.margin.-120px.0.0.0="floatingToc = true" x-intersect:enter.margin.120px.0.0.0="floatingToc = false, floatingTocOpen = false">
+    {# Innholdsfortegnelse sticky #}
+    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc z-50" id="toc" x-intersect:leave.margin.-120px.0.0.0="tocFixed = true" x-intersect:enter.margin.0.0.0.0="tocFixed = false, tocOpen = false">
       <h2 class="flex items-baseline sticky z-10 lg:bg-white top-0 py-2 font-semibold gap-x-0.5 text-fluid-18-20">
         <a href="#toppen">{{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}</a>
         <span>Innhold på siden</span>
       </h2>
-      <ul class="pr-6 mb-8 ml-1.5 border-l-2 text-fluid-16-18/normal opacity-90 border-slate-300">
-        {% for chapter in chapters %}
-        {% set chapterIndex = loop.index %}
-        <li class="not-first:mt-1">
-          <a class="relative inline-block px-1 pt-0.5 pl-4 pb-1 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 toc-item" href="#{{ chapter.data.title | slugify }}" style="--for: --chapter-{{ loop.index }}">
-          <div class="absolute inset-y-0 left-0 hidden w-1 -translate-x-px lg:block rounded-r-xs" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'bg-deepblue-300'"></div>
-            {{ chapter.data.title }}
-          </a>
-          {% if (chapter.templateContent | tocData).length >= 2 %}           
-          <ul class="hidden my-1.5 ml-8 mb-6 lg:block" x-show="chapterIndex == {{ chapterIndex }}">
-          {% for item in chapter.templateContent | tocData %}
-            <li class="not-first:mt-1">
-              <a class="inline-block p-1 underline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}">
-                <span>{{ item.text }}</span>
-              </a>
-            </li>
-          {% endfor %}
-          </ul>
-          {% endif %}
-        </li>
-        {% endfor %}
-      </ul>
+      {{ toc(chapters) }}
     </div>
+
+    {# Innholdsfortegnelse fixed #}
+    <div class="fixed inset-x-0 top-0 z-50 grid max-h-full overflow-y-auto bg-white border-b shadow grid-cols-article lg:hidden border-slate-300 overscroll-y-contain" x-show="tocFixed" x-on:click.outside="tocOpen = false">
+        <button type="button" class="col-main flex items-center sticky z-10 bg-white top-0 py-4 font-semibold gap-x-0.5 text-fluid-18-20" x-on:click="tocOpen = !tocOpen">
+          {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 -translate-y-0.5 -translate-x-1') | safe  }}</a>
+          <span>Innhold på siden</span>
+          <span class="-translate-y-0.5 ml-auto" x-bind:class="tocOpen && 'rotate-180'">
+          {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('') | safe }}</span>
+
+        </button>
+        <div x-show="tocOpen" class="col-main">
+          {{ toc(chapters) }}
+        </div>
+      </div>
+    </div>
+
 
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="mb-16 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect:enter.margin.0%.0%.-50%.0%="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
+      <section class="mb-16 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.-30%.0%.-30%.0%="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
         <div class="w-10 h-[0.625ch] bg-deepblue-200 mt-8"></div>
         <h2 class="mt-5 mb-4 -translate-x-0.5 font-semibold text-fluid-32-36/tight text-balance">
           <a href="#{{ chapter.data.title | slugify }}">
@@ -74,58 +104,6 @@
         {{ chapter.templateContent | markdown | safe }}
       </section>
     {% endfor %}
-
-
-    {# Floating TOC #}
-    <div class="sticky inset-x-0 z-50 hidden bottom-6 col-full justify-items-start px-page">
-
-      <div class="h-6 translate-y-2 border-b-8 border-white pointer-events-none w-stretch bg-gradient-to-b from-transparent to-white"></div>
-
-      <details class="relative z-10 flex flex-col justify-start mx-auto open:bg-white w-stretch rounded-3xl max-w-main ring-2 ring-slate-300 open:ring-slate-100 overflow-clip isolate group peer/details" id="floatingToc">
-        <summary class="flex rounded-t-3xl z-20 w-stretch items-baseline py-2 shrink-0 font-semibold bg-slate-100 hover:bg-slate-200 cursor-pointer gap-x-0.5 text-fluid-18-20 px-4">
-          {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}
-          <span class="mr-6">Innhold på siden</span>
-          {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-6 h-6 ml-auto translate-y-1 -translate-x-1 group-open:rotate-180') | safe  }}
-        </summary>
-
-        <div class="relative grid grid-rows-[1fr_auto] z-20 overscroll-contain max-h-0 group-open:max-h-[60vh] mt-auto overflow-y-auto max-w-main w-full pt-4 pb-8 px-3.5 transition-all duration-300">
-          <ul class="transition-all text-fluid-16-18/snug">
-            {% for chapter in chapters %}
-            {% set chapterIndex = loop.index %}
-            <li class="relative pl-6 not-first:mt-1">
-              <div class="absolute w-2 mt-3 rounded-full left-1 aspect-square" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'bg-slate-600'"></div>
-
-              <a class="inline-block px-1 py-1 underline hover:text-blue-700 hover:decoration-2 decoration-slate-800/40" href="#{{ chapter.data.title | slugify }}" x-on:click="floatingTocOpen = false">
-                {{ chapter.data.title }}
-              </a>
-              {% if (chapter.templateContent | tocData).length >= 1 %}           
-              <ul class="mt-0.5 ml-1 border-l-2 pl-3 mb-6 border-slate-300">
-              {% for item in chapter.templateContent | tocData %}
-                <li class="py-0.5">
-                  <a class="inline-block px-1 py-1 underline text-gray-900/80 hover:text-blue-700 decoration-slate-800/40 hover:decoration-2" href="#{{ item.id }}" x-on:click="floatingTocOpen = false">
-                    {{ item.text }}
-                  </a>
-                </li>
-              {% endfor %}
-              </ul>
-              {% endif %}
-            </li>
-            {% endfor %}
-          </ul>
-        </div>
-      </details>
-      <button type="button" class="fixed inset-0 hidden peer-open/details:block bg-slate-800/25 backdrop-blur-xs -z-0" onclick="document.getElementById('floatingToc').removeAttribute('open')"></button>
-
-      <script>
-        const tocLinks = document.getElementById('floatingToc')
-        for (const tocLink of tocLinks.children) {
-          tocLink.addEventListener("click", (e) => {
-            if (e.target.hash !== undefined) {
-              tocLinks.removeAttribute('open')
-            }
-        })
-        }
-      </script>
     </div>
 
     <div class="pt-2 mt-12 italic border-t text-fluid-16-18 border-slate-200 col-main">{{ published | safe }}</div>
